# CmakeTemplateSolution

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
CmakeTemplate/: CMakeLists.txt  CmakeTemplate.cpp  CmakeTemplate.h
Docs/: doc.md
